methodlara ayrildi